--- a/styles/contact-part.css
+++ b/styles/contact-part.css
@@ -34,7 +34,7 @@
 
     color: var(--deepTaupe);
     font-size: var(--text-18);
-    line-height: 24px;
+    line-height: 150%;
     text-decoration: none;
 }
 
@@ -68,12 +68,12 @@
     }
 
     .contacts__map{
-        width: 70%;
+        width: 100%;
         height: 400px;
     }
 
     .contacts__wrapper {
-        width: 70%; 
+        width: 100%; 
         margin: 0 auto 70px;
     }
 
@@ -109,7 +109,7 @@
 /* 453px */
 @media(max-width: 453px) {
     .contacts__wrapper {
-        width: 90%;
+        width: 100%;
     }
 
     .contacts__btn.common-btn_peach  {
