--- a/styles/why-block.css
+++ b/styles/why-block.css
@@ -2,7 +2,7 @@
 
 .why-block {
     margin: 52px auto 0;
-    padding: 0 0 52px;
+    padding: 0 0 30px;
 
     background-color: var(--middleDirtyWhite);
     text-align: center;
@@ -25,7 +25,7 @@
 
 .why-block__item {
     width: 23%;
-    padding: 33px 13px 50px;
+    padding: 33px 13px 20px;
 
     transition: 0.3s;
     box-sizing: border-box;
@@ -52,10 +52,23 @@
 
 /* 11.MAIN PAGE MEDIA START */
 
-/* 927px */
-@media(max-width: 927px) { 
+/* 1140px */
+@media(max-width: 1140px) {
+    .why-block {
+        padding: 0 0 43px;
+        margin: 52px auto 12px;
+    }
+}
+
+/* 930px */
+@media(max-width: 930px) { 
     .why-block__items {
-        flex-direction: column;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    
+    .why-block__item {
+        padding: 20px;
     }
 
     .why-block__item {
@@ -66,4 +79,42 @@
     .why-block {
         padding: 0;
     }    
+}
+
+/* 600px */
+@media(max-width: 600px) {  
+    .why-block__item img {
+        width: 30px;
+        height: 30px;
+    }
+
+    .why-block__item .common-h3 {
+        font-size: var(--text-15);
+
+        line-height: 150%;
+    }
+
+    .why-block__item .common-p {
+        font-size: var(--text-14);
+
+        line-height: 150%;
+    }
+
+    .why-block__h3 {
+        margin: 10px 0;
+    }
+
+    .why-block {
+        margin: 30px auto;
+        padding: 0 0 20px;
+    }
+
+    .why-block__item {
+        width: 100%;
+        /* padding: 20px 10px; */
+    }
+
+    .why-block .common-h2 {
+        padding: 30px 0 10px;
+    }
 }
