--- a/styles/benefits.css
+++ b/styles/benefits.css
@@ -40,26 +40,72 @@
 /* 1140px */
 @media(max-width: 1140px){ 
 
-     .benefits__items {
-        flex-direction: column;
-        align-items: center;
-    }
+    .benefits__items {
+        /* flex-direction: column;
+        align-items: center; */
 
-    .benefits__item {
-        width: 70%;
-        margin: 0 auto 30px;
+        display: grid;
+        grid-gap: 20px;
+        grid-template-columns: 1fr 1fr;
     }
 
     .benefits__items :last-child {
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+
+    .benefits__item {
+        /* width: 70%; */
+        width: 100%;
+
+        text-align: center;
+        /* margin: 0 auto 30px; */
+    }
+
+    .benefits__items li:last-child {
         margin: 0 auto;
     }
 }
 
-/* 700px */
-@media(max-width: 700px){  
+/* 600px */
+@media(max-width: 600px){ 
     .benefits__item {
-        width: 90%;
+        padding: 20px;
+    }
+
+    .benefits__item img {
+        width: 40px;
+        height: 40px;
+    }
+
+    .benefits__item .common-h3 {
+        font-size: var(--text-15);
+    }
+
+    .benefits__item .common-p {
+        font-size: var(--text-14);
+    }
+    
+    .benefits__h3 {
+        margin: 10px 0;
+    }   
+}
+
+/* 450px */
+@media(max-width: 450px){ 
+    .benefits__items {
+        grid-gap: 15px;
+    }
+
+    .benefits__item {
+        padding: 15px;
+    }
+
+    .benefits__items {
+        display: flex;
+        flex-direction: column;
     }
 }
+
 
 /* 6.ABOUT PAGE MEDIA START */
