--- a/styles/services.css
+++ b/styles/services.css
@@ -27,7 +27,7 @@
 .services__img {
     width: 100%;
     height: 120px;
-    padding: 20px 0 0;
+    padding: 20px 0;
 }
 
 .services__img svg path {
@@ -92,6 +92,10 @@
     .services__img svg {
         width: 40px;
         height: 40px;
+    }
+
+    .services__img {
+        padding: 10px 0;
     }
 }
 
