--- a/styles/style.css
+++ b/styles/style.css
@@ -3077,6 +3077,7 @@ PRIVACY PAGE START
 
 .common-h1.privacy__h1 {
     text-align: center;
+    padding: 30px 0;
 }
 
 .privacy__h3.common-h3 {
@@ -3108,19 +3109,42 @@ PRIVACY PAGE START
     }
 
     .privacy__text-block.container {
-        width: 90%;
+        width: 100%;
+        padding: 0 34px;
     }
-}
 
-/* 500px */
-@media(max-width: 1140px) { 
-    .common-h1.privacy__h1 {
-        font-size: var(--text-24);
+    .privacy__info-box {
+        margin: 0 auto 52px;
     }
 
     .privacy__wrapper {
         text-align: justify;
     }
+}
+
+/* 930px */
+@media(max-width: 930px) { 
+    .privacy__ul {
+        margin: 30px auto;
+    }
+
+    .privacy__info-box {
+        margin: 0 auto 30px;
+        padding: 15px;
+    }
+}
+
+/* 460px */
+@media(max-width: 460px) { 
+
+    .common-h1.privacy__h1 {
+        font-size: var(--text-24);
+    }
+
+    .privacy__text-block.container {
+        padding: 0 20px;
+    }
+    
 }
 
 /* 2.PRIVACY PAGE MEDIA END */
