--- a/styles/style.css
+++ b/styles/style.css
@@ -3507,7 +3507,7 @@ PLACE PAGE START
     }
 
     .place__text-box {
-        width: 90%;
+        width: 100%;
         margin: 0 auto 52px;
     }
     
@@ -3517,7 +3517,7 @@ PLACE PAGE START
 
     .how-a-buy__p,
     .what-price__text-box {
-        width: 90%;
+        width: 100%;
         margin: 0 auto 20px;
     }
 
@@ -3530,34 +3530,59 @@ PLACE PAGE START
     }
 
     .what-price__calculate {
-        width: 90%;
+        width: 100%;
         margin: 0 auto;
         padding: 20px;
     }
 
     .common-h2.how-a-buy__h2,
     .common-h2.what-price__h2 {
-        width: 90%;
+        width: 100%;
         margin: 0 auto;
     }
 
     .common-btn_white.what-price__btn {
         width: 30%;
     }
+    
+    .common-h1.place__h1 {
+        padding: 30px 0;
+    }
+    
+    .common-btn_peach.place__btn {
+        margin: 0 auto;
+    }
+
+    .place-page .prices-block__img-box {
+        margin: 0 auto;
+    }
+
+    .what-price.container {
+        margin: 0 auto 30px;
+    }
 }
 
-/* 840px */
-@media(max-width: 840px) {
+/* 930px */
+@media(max-width: 930px) {
     .common-p.place__p,
     .common-p.how-a-buy__p,
     .common-p.what-price__p {
         text-align: justify;
+        margin: 0 0 15px;
     }
 
     .common-btn_peach.place__btn,
     .common-btn_white.what-price__btn {
         width: 70%;
         margin: 0 auto;
+    }
+
+    .common-p.place__p:last-child {
+        margin-bottom: 30px;
+    }
+
+    .place__text-box {
+        margin: 0 auto 30px;
     }
 }
 
