--- a/styles/style.css
+++ b/styles/style.css
@@ -3687,18 +3687,18 @@ MORGUES PAGE START
 
     .morgues__text-block,
     .morgues__prices-info-box {
-        width: 90%;
+        width: 100%;
         margin: 0 auto;
     }
 
     .morgues .reception-control {
-        width: 90%;
+        width: 100%;
         margin: 52px auto 0;
         padding: 20px;
     }
 
     .morgue__tyles-list {
-        width: calc(90% - 26px);
+        width: calc(100% - 34px);
     }
 
     .morgues__prices-text-box {
@@ -3706,11 +3706,19 @@ MORGUES PAGE START
     }
 
     .morgues-page .have-a-question {
-        margin: 52px auto 0;
+        margin: 52px auto;
     }
 
     .have-a-question__h2.common-h2 {
         padding: 20px 0;
+    }
+
+    .common-h1.morgues__h1 {
+        padding: 30px 0;
+    }
+
+    .common-p.morgues__p:last-child {
+        margin: 0;
     }
 } 
 
@@ -3721,9 +3729,12 @@ MORGUES PAGE START
         text-align: justify;
     }
 
-    .morgues .reception-control,
-    .morgues-page .have-a-question {
+    .morgues .reception-control {
         margin: 30px auto 0;
+    }
+
+    .morgues-page .have-a-question {
+        margin: 30px auto;
     }
 
     .morgue__tyles-list {
